--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,11 +154,18 @@ body {
   @media (max-width: 480px) {
     width: 100vw !important;
     max-width: 100vw !important;
-    height: 100vh !important;
-    max-height: 100vh !important;
+    height: 100dvh !important;
+    max-height: 100dvh !important;
+    margin: 0 !important;
+    padding: 0 !important;
 
-    .mat-mdc-dialog-container .mdc-dialog__surface {
-      border-radius: 0 !important;
+    .mat-mdc-dialog-container {
+      padding: 0 !important;
+
+      .mdc-dialog__surface {
+        border-radius: 0 !important;
+        max-height: 100dvh !important;
+      }
     }
   }
 }
